// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select/> it can select multiple values 1`] = `
<DocumentFragment>
  <div
    data-testid="my-select-component"
  >
    <select
      chakrastyles="[object Object]"
      classnameprefix="multi"
      data-testid="react-select"
      id="form-field"
      name="colors"
      placeholder="Select..."
      selectedoptionstyle="check"
    >
      <option
        value="blue"
      >
        Blue
      </option>
      <option
        value="purple"
      >
        Purple
      </option>
    </select>
    ,
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Select/> it renders SelectIconOption with icon 1`] = `
<DocumentFragment>
  <div
    data-testid="my-select-component"
  >
    <div
      class="css-70qvj9"
    >
      <svg
        class="chakra-icon chakra-icon css-12m389b"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
          fill="currentColor"
        />
      </svg>
      <span
        class="css-1v4xcoh"
      >
        test
      </span>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Select/> it renders SelectIconOption with iconUrl 1`] = `
<DocumentFragment>
  <div
    data-testid="my-select-component"
  >
    <div
      class="css-70qvj9"
    >
      <img
        class="chakra-image css-4n3cc1"
        src="https://www.mockurl.com/image.png"
      />
      <span
        class="css-1v4xcoh"
      >
        test
      </span>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Select/> it renders creatable 1`] = `
<DocumentFragment>
  <div
    data-testid="my-select-component"
  >
    <div
      chakrastyles="[object Object]"
      class="css-0"
      id="form-field"
      name="colors"
      options="[object Object],[object Object]"
      placeholder="Select..."
      selectedoptionstyle="check"
    >
      MockCreatableSelect
    </div>
    ,
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Select/> it renders with no options 1`] = `
<DocumentFragment>
  <div
    data-testid="my-select-component"
  >
    <select
      chakrastyles="[object Object]"
      data-testid="react-select"
    />
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Select/> it renders with no options 2`] = `
<DocumentFragment>
  <div
    data-testid="my-select-component"
  >
    <select
      chakrastyles="[object Object]"
      data-testid="react-select"
      id="form-field"
      name="colors"
      placeholder="Select..."
      selectedoptionstyle="check"
    >
      <option
        value="blue"
      >
        Blue
      </option>
      <option
        value="purple"
      >
        Purple
      </option>
    </select>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
